<resources>
    <string name="app_name">Tinnicure</string>
    <string name="action_settings">Settings</string>
    <string name="mechoftin">Mechanism of Tinnitus</string>
    <string name="cochlea">The ear is a fairly complex organ that converts sound waves
into brain signals. Cochlea (inner ear hearing organ), is a
snail like structure that does this conversion. The cochlea
works by transmitting different frequencies from the point
where it receives the frequency to the corresponding point in
the brain. The brain and cochlea are arranged exactly alike,
with the frequencies (pitches) that are next to each other on
the cochlea being exactly next to each other in the brain as
well.</string>
    <string name="ear_2">Tinnitus is caused when a particular frequency range in the
cochlea is damaged and no longer sends information to the
brain. This may seem strange at first as tinnitus is caused
by the brain NOT receiving signals rather than receiving too
much.</string>
    <string name="brain">Your brain is incredible and is very, very good at reusing
space. For example, if you are blind your brain will often
convert the areas traditionally used for image processing to
instead process extra audio, smell, and taste sensations. In
the case of tinnitus, your brain quickly recognizes that you
no longer have a use for the space reserved for the
frequencies that are damaged in your cochlea, so it reuses
the space for other frequencies. The frequencies near the
damaged frequencies are given extra processing power. So
they become better at detecting patterns and also tend to
spontaneously be more active. Unfortunately, that means
they create the perception of the sound by having too much
activity. The rest of the brain sees that there is activity in the
hearing part and it assumes there is a sound there. This
creates the perception of ringing.</string>
    <string name="help">This is where sound therapy can help.</string>
    <string name="goal">Goals of Sound Therapy</string>
    <string name="soundther">•Sound therapy in tinnitus
management is the strategy of
presenting an external sound to
mask the perceived sound in
the ear, tinnitus.\n\n•Listening to sound therapy will
make your tinnitus less
noticeable. Using sound
therapy in the long term is
thought to potentially rewire the
pathological neuronal pathways
that are responsible for the
perception of tinnitus.</string>
    <string name="types">Types of Sound Therapy</string>
    <string name="typesndther">•Generic (non-customized) masking efforts have
presented broadband noises, most typically white
noise. These noises usually sound like the rain or a
fan. Despite being helpful, they don’t allow the user to
hear other sounds because they cover their entire
hearing spectrum.\n\n•Customized sound therapy is tailored based on your
hearing status and tinnitus pitch match. The
advantage is that the amount of acoustic energy
required for masking is significantly reduced.</string>
    <string name="cust">Customized Sound Therapy</string>
    <string name="custsndther">•After you receive your customized sound therapy, we
would like you to start listening to the provided sound
therapy for at least 2 hours a day. You can use it
during the times that your tinnitus bothers you or
when sleeping.\n\n•Please use the sound therapy everyday during the
program. Tinnitus is a chronic condition and
therefore, needs long term treatment.</string>
    <string name="mindful">Mindful Breathing Exercises</string>
    <string name="mindfulbreath">•Breathing is essential to life and you have been doing it since
the day you where born, but have you ever noticed it?\n\n•The mindful breath meditation will guide you through a
meditation that centers around noticing your breath.\n\n•Explore it with all your senses. Become more familiar with it.
How does it sound? How does it feel with each in-breath and
out-breath? Is the air cool or warm? Where exactly do you feel
the breath?\n\n•We will be using your breath as a tool for relaxation, and
something to focus your attention on to block out the many
thoughts racing through your mind at any particular moment.\n\n•Remember like with all mediations, do not become
discouraged if you are not able to focus your mind during the
entire duration of the meditation. With practice your focus and
meditation will become deeper allowing you to experience
more relaxation and control over your mind.</string>
    <string name="homework">Homework</string>
    <string name="mindfulhomework">•Practice mindful breathing exercise during any free
moment.\n\n•At the very minimum practice 2 times per day for 5 - 8
minutes each session.</string>
    <string name="mod8">The last step to finishing this Cognitive Behavioral Therapy is the Homework for Week 8.</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="outline">Tinnitus Education: Outline</string>
    <string name="tinedoutline">•What is Tinnitus?\n&#160;&#160;&#160;&#160;&#160; -How we hear vs. tinnitus\n&#160;&#160;&#160;&#160;&#160; hearing.\n&#160;&#160;&#160;&#160;&#160; -Sounds of tinnitus\n&#160;&#160;&#160;&#160;&#160; -How many people have tinnitus?\n•What causes Tinnitus?\n•How can Tinnitus affect you?\n&#160;&#160;&#160;&#160;&#160; -Tinnitus can affect concentration\n&#160;&#160;&#160;&#160;&#160; -Tinnitus can cause emotional\n&#160;&#160;&#160;&#160;&#160; reactions\n&#160;&#160;&#160;&#160;&#160; -Tinnitus can disrupt sleep\n&#160;&#160;&#160;&#160;&#160; -Why is tinnitus a problem?\n•Is there a cure?\n &#160;&#160;&#160;&#160;&#160;-Methods to eliminate tinnitus or \n&#160;&#160;&#160;&#160;&#160;reduce its loudness\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; •Prescription Drugs\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; •Use of Sound\n&#160;&#160;&#160;&#160;&#160; -Methods to manage tinnitus</string>
    <string name="whatis">What is tinnitus?</string>
    <string name="tinnitus">•TIN-i-tus is a ringing, humming, buzzing, or other
chronic noise that is perceived that does not have an
outside source. This sound can occur from one or
both ears, or within the head.\n\n•In the U.S., 50 million people have experienced
tinnitus at some point and 10 million people visit
physicians for this problem</string>
    <string name="howhear">How we hear vs. tinnitus</string>
    <string name="soundwaves">Sound waves in the air become transformed into signals
that the brain recognizes as sound. With tinnitus there
are NO sound wave vibrations that cause nerve fibers to
activate. In most forms of tinnitus, it is thought that
nerves fire on their own. The brain perceive these
signals as sound</string>
    <string name="causes">What Causes Tinnitus</string>
    <string name="mod1pg4">•When we get hearing loss, we lose some cells in the
inner ear that sense sound. The brain cells that do
the function of hearing, however, do not die. This
causes an increase in activity in the brain cells that
do the function of hearing.\n\n•Tinnitus is caused by a combination of this increase
in activity and usually one of the following factors:\n&#160;&#160;&#160;&#160;&#160;-Stress\n
        &#160;&#160;&#160;&#160;-Anxiety\n&#160;&#160;&#160;&#160;&#160;-Fatigue\n
        &#160;&#160;&#160;&#160;-Poor sleep\n&#160;&#160;&#160;&#160;&#160;-Depression
    </string>
    <string name="mod1pg5">•Factors such as stress, anxiety, depression, poor
sleep, etc. cause some changes in the brain that
makes the brain more aware of the tinnitus\n\n•Since tinnitus is affected by emotional factors (e.g.,
stress, anxiety, depression, etc), management of
tinnitus requires managing any of these co-existing
issues\n\n•This includes, sleep management, stress
management, etc.</string>
    <string name="sounds">Sounds of Tinnitus</string>
    <string name="mod1pg6">•Patients with tinnitus often report sounds of:\n
        &#160;&#160;&#160;&#160;-Ringing\n&#160;&#160;&#160;&#160;&#160;-High pitched tone\n
        &#160;&#160;&#160;&#160;-Hissing\n&#160;&#160;&#160;&#160;&#160;-High tension wire\n
        &#160;&#160;&#160;&#160;-Buzzing\n&#160;&#160;&#160;&#160;&#160;-Sizzling\n
        &#160;&#160;&#160;&#160;-Crickets
    </string>
    <string name="affect">How can tinnitus affect you?</string>
    <string name="mod1pg7">•Tinnitus can affect a person’s life in a variety of ways
Some of the main effects are:\n\n&#160;&#160;&#160;&#160;&#160;-Concentration difficulties\n
    &#160;&#160;&#160;&#160;-Emotional reactions\n&#160;&#160;&#160;&#160;&#160;-Disrupted sleep\n\n
        •The onset of tinnitus can be life-altering
    </string>
    <string name="mod1pg8title">Tinnitus can affect concentration</string>
    <string name="mod1pg8">•The sound of tinnitus can disrupt work and tasks that
require your attention\n\n•The chronic sound of tinnitus is unpleasant and
cannot be eliminated\n&#160;&#160;&#160;&#160;&#160;-Some people differ in their ability to ignore sounds.
For some, it is easy to ignore, but for others it can
be challenging\n\n•Tinnitus does not make it difficult to hear, but it can
disturb with focused listening</string>
    <string name="mod1pg9title">Tinnitus can cause emotional reactions</string>
    <string name="mod1pg9">•Tinnitus is a chronic noise and can become irritating\n\n
    •Emotional reactions to tinnitus have been reported to
cause:\n&#160;&#160;&#160;&#160;&#160;-Depression\n&#160;&#160;&#160;&#160;&#160;-Anxiety\n
        &#160;&#160;&#160;&#160;-Anger\n&#160;&#160;&#160;&#160;&#160;-Frustration\n
        &#160;&#160;&#160;&#160;-Worry\n\n•People with previously existing anxiety and
depression are more prone to chronic tinnitus\n\n•The goal of tinnitus management is to manage these
reactions to tinnitus.</string>
    <string name="mod1pg10title">Tinnitus can disrupt sleep</string>
    <string name="mod1pg10">•Many tinnitus patients have reported sleep problems\n\n
        •Tinnitus can make it hard to fall asleep and returning
to sleep after waking up in the middle of the night\n\n
        •The worse your sleep is, the worse your tinnitus will
be the next day\n\n
        •Tinnitus can cause you to become sleep deprived
and make it harder to normally function during the
day
    </string>
    <string name="mod1pg11title">Why does tinnitus become a problem</string>
    <string name="mod1pg11">1. Many people with tinnitus report that “it came out of
nowhere.” Tinnitus is a different sound and it can be
annoying by focusing on it.\n\n2. It can be perceived as a threat and keep our
attention. It can create fear that it is a serious medical
condition or a psychological disorder. There are often
reports of “going crazy” or “having a tumor”.\n\n3. There are different reactions to tinnitus. The sound of
tinnitus may disturb one person, but not another.\n\n4. Tinnitus can be annoying because the sound is
persistent. There is a loss of “peace and quiet”.</string>
    <string name="mod4pt1pg38">Lets start with some of your negative thoughts: Is
there any possibility that you can find other facts
related to them? More specifically, facts that might
challenge them?\n\nExample: My boss yelled at me\n
    Negative Thought: I am a terrible person\n
        Other Possible Facts: I didn’t do a good job and maybe he was in a bad mood\n\n1)
    </string>
    <string name="mod4pt1pg39">Please explain the circumstances.\n\n
1) The last time you were very upset\n\nDescription of Event:</string>
    <string name="mod4pt1pg40">2) The last time you were very angry\n\nDescription of Event:</string>
    <string name="mod4pt1pg41">3) The last time you were very anxious\n\nDescription of Event:</string>
    <string name="notesEditText">Enter Text</string>
</resources>