<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Teal"
    tools:context="com.example.tinnicure.Module2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mechoftin"
        android:textColor="@color/White"
        android:textSize="26sp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/text_view_mod2"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv"
        android:layout_above="@+id/backbutton"
        android:layout_centerHorizontal="true"
        android:id="@+id/sv1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textSize="22sp"
                android:id="@+id/text_view_mod2_2"
                android:text="@string/cochlea"
                />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_below="@+id/text_view_mod2"
        android:layout_centerHorizontal="true"
        android:layout_width="480dp"
        android:layout_height="100dp"
        android:id="@+id/iv"
        android:src="@drawable/cochlea"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="10dp"
        android:textColor="@color/Teal"
        android:background="@drawable/white_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/backbutton"
        android:onClick="mod2Back"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="1 of 7"
        android:textSize="20sp"
        android:textColor="@color/White"
        android:id="@+id/textviewmod2_3"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/Teal"
        android:background="@drawable/white_button"
        android:id="@+id/nextbutton"
        android:onClick="mod2Next"
        />

</RelativeLayout>
