<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Teal"
    tools:context="com.example.tinnicure.Module1Part1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:textSize="26sp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/text_view_mod1pt1"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backbuttonmod1"
        android:id="@+id/scrollview1"
        android:layout_below="@+id/image_view_mod1pt1_2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tinedoutline"
                android:textSize="22sp"
                android:textColor="@color/White"
                android:id="@+id/text_view_mod1pt1_3"
                />
        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:layout_below="@id/text_view_mod1pt1"
        android:layout_centerHorizontal="true"
        android:layout_width="360dp"
        android:scaleType="fitXY"
        android:layout_height="100dp"
        android:id="@+id/image_view_mod1pt1_2"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="60dp"
        android:id="@+id/image_view_mod1pt1_3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="10dp"
        android:textColor="@color/Teal"
        android:background="@drawable/white_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/backbuttonmod1"
        android:onClick="mod1Pt1Back"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/White"
        android:id="@+id/textviewmod1pt1_4"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/Teal"
        android:background="@drawable/white_button"
        android:id="@+id/nextbuttonmod1"
        android:onClick="mod1Pt1Next"
        />

</RelativeLayout>

