<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Teal"
    tools:context="com.example.tinnicure.Module4Part1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="22sp"
        android:textColor="@color/White"
        android:id="@+id/text_view_mod4_pt1"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_mod4_pt1"
        android:layout_above="@+id/backbuttonmod4">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_mod4_pt1_2"
                android:textSize="22sp"
                android:textColor="@color/White"/>
        </RelativeLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_mod4_pt1"
        android:visibility="gone"
        android:id="@+id/sv4_ex1"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod4pt1pg38"
                android:textSize="16sp"
                android:id="@+id/mod4pt1ex1"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mod4pt1ex1"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notesEditTextmod4_ex4_1"
                android:layout_gravity="left|top"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:lines="2"
                android:maxLines="3"
                android:hint="@string/notesEditText"
                android:gravity="top"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2)"
                android:layout_below="@+id/notesEditTextmod4_ex4_1"
                android:textSize="16sp"
                android:id="@+id/mod4pt1ex1_2"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mod4pt1ex1_2"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notesEditTextmod4_ex4_2"
                android:layout_gravity="left|top"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:lines="2"
                android:maxLines="3"
                android:hint="@string/notesEditText"
                android:gravity="top"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notesEditTextmod4_ex4_2"
                android:text="3"
                android:textSize="16sp"
                android:id="@+id/mod4pt1ex1_3"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mod4pt1ex1_3"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notesEditText_ex4_3"
                android:layout_gravity="left|top"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:lines="2"
                android:maxLines="3"
                android:hint="@string/notesEditText"
                android:gravity="top"/>
        </RelativeLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_mod4_pt1"
        android:visibility="gone"
        android:id="@+id/sv4_ex2_1"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod4pt1pg39"
                android:textSize="16sp"
                android:id="@+id/mod4pt1ex2"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mod4pt1ex2"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notesEditTextmod4_ex4_2_1"
                android:layout_gravity="left|top"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:lines="2"
                android:maxLines="3"
                android:hint="@string/notesEditText"
                android:gravity="top"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thoughts:"
                android:layout_below="@+id/notesEditTextmod4_ex4_2_1"
                android:textSize="16sp"
                android:id="@+id/mod4pt1ex1_2_2"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mod4pt1ex1_2_2"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notesEditTextmod4_ex4_2_2"
                android:layout_gravity="left|top"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:lines="2"
                android:maxLines="3"
                android:hint="@string/notesEditText"
                android:gravity="top"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notesEditTextmod4_ex4_2_2"
                android:text="Behavior:"
                android:textSize="16sp"
                android:id="@+id/mod4pt1ex1_2_3"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mod4pt1ex1_2_3"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notesEditText_ex4_2_3"
                android:layout_gravity="left|top"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:lines="2"
                android:maxLines="3"
                android:hint="@string/notesEditText"
                android:gravity="top"/>
        </RelativeLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_mod4_pt1"
        android:visibility="gone"
        android:id="@+id/sv4_ex2_2"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod4pt1pg40"
                android:textSize="16sp"
                android:id="@+id/mod4pt1ex2_cont_1"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mod4pt1ex2_cont_1"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notesEditTextmod4_ex2_cont_1"
                android:layout_gravity="left|top"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:lines="2"
                android:maxLines="3"
                android:hint="@string/notesEditText"
                android:gravity="top"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thoughts:"
                android:layout_below="@+id/notesEditTextmod4_ex2_cont_1"
                android:textSize="16sp"
                android:id="@+id/mod4pt1ex2_cont_2"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mod4pt1ex2_cont_2"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notesEditTextmod4_ex2_cont_2"
                android:layout_gravity="left|top"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:lines="2"
                android:maxLines="3"
                android:hint="@string/notesEditText"
                android:gravity="top"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notesEditTextmod4_ex2_cont_2"
                android:text="Behavior:"
                android:textSize="16sp"
                android:id="@+id/mod4pt1ex2_cont_3"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mod4pt1ex2_cont_3"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notesEditTextmod4_Ex2_cont_3"
                android:layout_gravity="left|top"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:lines="2"
                android:maxLines="3"
                android:hint="@string/notesEditText"
                android:gravity="top"/>
        </RelativeLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_mod4_pt1"
        android:visibility="gone"
        android:id="@+id/sv4_ex2_3"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod4pt1pg41"
                android:textSize="16sp"
                android:id="@+id/mod4pt1ex2_cont_2_1"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mod4pt1ex2_cont_2_1"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notesEditTextmod4_ex2_cont_2_1"
                android:layout_gravity="left|top"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:lines="2"
                android:maxLines="3"
                android:hint="@string/notesEditText"
                android:gravity="top"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thoughts:"
                android:layout_below="@+id/notesEditTextmod4_ex2_cont_2_1"
                android:textSize="16sp"
                android:id="@+id/mod4pt1ex2_cont_2_2"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mod4pt1ex2_cont_2_2"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notesEditTextmod4_ex2_cont_2_2"
                android:layout_gravity="left|top"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:lines="2"
                android:maxLines="3"
                android:hint="@string/notesEditText"
                android:gravity="top"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notesEditTextmod4_ex2_cont_2_2"
                android:text="Behavior:"
                android:textSize="16sp"
                android:id="@+id/mod4pt1ex2_cont_2_3"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mod4pt1ex2_cont_2_3"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/notesEditTextmod4_Ex2_cont_2_3"
                android:layout_gravity="left|top"
                android:layout_marginTop="15dp"
                android:textColor="@color/White"
                android:lines="2"
                android:maxLines="3"
                android:hint="@string/notesEditText"
                android:gravity="top"/>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/backbuttonmod4"
        android:background="@drawable/white_button"
        android:textColor="@color/Teal"
        android:onClick="mod4Back"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/White"
        android:id="@+id/text_view_mod4_pt1_3"
        android:text="Page 1"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/nextbuttonmod4"
        android:background="@drawable/white_button"
        android:textColor="@color/Teal"
        android:onClick="mod4Next"
        />

</RelativeLayout>
